2006-07-25  Alex Roitman  <shura@gramps-project.org>
	* src/Filters/_SearchBar.py (get_value,apply_filter): Force unicode.
	* src/Filters/_PersonSidebarFilter.py (get_filter): Force unicode.
	* src/Filters/_FamilySidebarFilter.py (get_filter): Force unicode.

2006-07-24  Alex Roitman  <shura@gramps-project.org>
	* configure.in: Bump up the version number.
	* src/GrampsDb/_GrampsBSDDB.py (find_fidmap): Remove unused method.

2006-07-24  Manfred Paulus  <manfred.paulus@gmx.de>
	* src/plugins/FanChart.py: Add circle, 1/2 circle and 1/4
	circle options, along with selectable generations
	* src/docgen/OpenOfficeDoc.py: fix rotation angle

2006-07-24  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py (gramps_upgrade_9): Map "Other
	Name" from gramps2.0.x to the "Unknown" name type;
	work out the case of no events.
	* src/GrampsDb/_ReadXML.py (start_name): Map "Other Name" from
	gramps2.0.x to the "Unknown" name type.
	(start_database): Add method to extract the XML version.
	* src/DisplayTabs/_BackRefModel.py (BackRefModel.load_model):
	Translate displayed object type.
	* debian/control (Build-Depends-Indep): Add python-central; 
	(XS-Python-Version): Add.

2006-07-23  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/GraphViz.py (get_date_strings): Typo.

2006-07-23  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: fix bug for no surname (bug #265)

2006-07-23  Manfred Paulus  <manfred.paulus@gmx.de>
	* src/BaseDoc.py: fix angle calculation
	* src/docgen/PSDrawDoc.py: fix angle calculation

2006-07-23  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py (GedcomParser.func_person_even): set
	default type for an event to CUSTOM

2006-07-23  Alex Roitman  <shura@gramps-project.org>
	* src/Filters/Rules/Person/_IsLessThanNthGenerationDescendantOf.py
	(IsLessThanNthGenerationDescendantOf.init_list): Use new API.
	* src/Filters/Rules/Person/_IsSiblingOfFilterMatch.py